Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjIntObjRetInteger.quorum
class Main
    action Main
        Yoda<Integer, Integer, Integer> yoda
        Integer y = yoda:useForce(66, 66)
        output "passed"
     end
end
