Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriIntegerRetIntegerFail.quorum
class Main
    action Main
        Yoda<Integer, Integer, integer> yoda
        boolean y = yoda(66, 66, true)
     end
end
